--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 <section>
 
 </section>
-<footer class="container fluid">
+<footer class="container-fluid">
     <div class="row">
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">About</h5>
         </div>
         <div class="col-sm-4">
-            <h5 >Download</h5>
+            <h5 class="uppercase general-sub">Download</h5>
         </div>
         <div class="col-sm-4">
-            <h5>Social</h5>
+            <h5 class="uppercase general-sub">Social</h5>
         </div>
     </div>
     
