--- a/index.html
+++ b/index.html
@@ -51,9 +51,12 @@
     <div class="row">
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">About</h5>
+            <p class="inline-block">Full Stack Web Developer, Skilled in HTML5, CSS3 and Javascript.
+            Limitless potential for Design and intuitive structural thinking. </p>
         </div>
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">Download</h5>
+            <p class="inline-block"></p>
         </div>
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">Social</h5>
