--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 </section>
 <footer class="container-fluid">
-    <div class="row">
+    <div id="footer-details" class="row">
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">About</h5>
             <p class="inline-block">Full Stack Web Developer, Skilled in HTML5, CSS3 and Javascript.
@@ -56,10 +56,60 @@
         </div>
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">Download</h5>
-            <p class="inline-block"></p>
+            <p class="inline-block">
+                Need a printable version of my CV? Download it here.
+                <a href="#" target="_blank" class="cv-pdf">
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                    <span class="sr-only">Download Link</span>
+                </a>
+            </p>
         </div>
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">Social</h5>
+            <ul class="list-inline social-links">
+                <li class="list-inline-item">
+                    <a href="#" target="_blank">
+                        <i class="fa fa-facebook" aria-hidden="true">
+                            <span class="sr-only">Facebook</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#" target="_blank">
+                        <i class="fa fa-twitter" aria-hidden="true">
+                            <span class="sr-only">Twitter</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#" target="_blank">
+                        <i class="fa fa-linkedin" aria-hidden="true">
+                            <span class="sr-only">LinkedIn</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#" target="_blank">
+                        <i class="fa fa-pinterest" aria-hidden="true">
+                            <span class="sr-only">Pinterest</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#" target="_blank">
+                        <i class="fa fa-instagram" aria-hidden="true">
+                            <span class="sr-only">Instagram</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="#" target="_blank">
+                        <i class="fa fa-youtube" aria-hidden="true">
+                            <span class="sr-only">Youtube</span>
+                        </i>
+                    </a>
+                </li>
+            </ul>
         </div>
     </div>
     
