--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
     </div>
 </header>
 <section class="container-fluid">
-    <div class="row row-table">
+    <div class="row">
+        <div class="col-md-4 .bg-color-personal-info.section-column">
+            <div class="row">
+                <div class="col-12">
+                    <h3 class="section-heading uppercase">
+                        Personal info
+                    </h3>
+                </div>
+            </div>
+        </div>
         <div class="col-md-8 bg-color-three-reasons section-column">
             <div class="row">
                 <div class="col">
