--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
                             <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                         </li>
                         <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                            <a href="contacts.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                            <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                            <a href="assets/CV/sample doc.docx" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                         </li>
                     </ul>
                 </div>
@@ -169,7 +169,7 @@
             <h5 class="uppercase general-sub">Download</h5>
             <p class="inline-block">
                 Need a printable version of my CV? Download it here.
-                <a href="#" target="_blank" class="cv-pdf">
+                <a href="assets/CV/sample doc.docx" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download Link</span>
                 </a>
@@ -179,42 +179,42 @@
             <h5 class="uppercase general-sub">Social</h5>
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="www.facebook.com" target="_blank">
                         <i class="fa fa-facebook" aria-hidden="true">
                             <span class="sr-only">Facebook</span>
                         </i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://twitter.com/?lang=en-gb" target="_blank">
                         <i class="fa fa-twitter" aria-hidden="true">
                             <span class="sr-only">Twitter</span>
                         </i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="www.linkedin.com" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true">
                             <span class="sr-only">LinkedIn</span>
                         </i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.pinterest.co.uk/" target="_blank">
                         <i class="fa fa-pinterest" aria-hidden="true">
                             <span class="sr-only">Pinterest</span>
                         </i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.instagram.com/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true">
                             <span class="sr-only">Instagram</span>
                         </i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.youtube.com/" target="_blank">
                         <i class="fa fa-youtube" aria-hidden="true">
                             <span class="sr-only">Youtube</span>
                         </i>
