--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Sam</title>
+    <title>Samuel Ismael</title>
 </head>
 <body>
 <header>
@@ -18,7 +18,7 @@
         <div class="col-md-8">
             <div class="row no-gutters bg-color-name-title">
                 <div class="col heading">
-                    <h1 class="name">Rosie Odenkirk</h1>
+                    <h1 class="name">Samuel Ismael</h1>
                     <h2 class="title">Full Stack Developer</h2>
                 </div>
             </div>
@@ -62,7 +62,7 @@
                         </div>
                         <div class="value">
                             <p>
-                                Rosie Odenkirk
+                                Samuel Ismael
                             </p>
                         </div>
                     </div>
@@ -74,7 +74,7 @@
                         </div>
                         <div class="value">
                             <p>
-                                17 Riverdale, Catskills, NY USA
+                                35 Perran Walk, Brentford, Middlesex, TW8 0LT
                             </p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                         </div>
                         <div class="value">
                             <p>
-                                555 204 1973
+                                07500192417
                             </p>
                         </div>
                     </div>
@@ -98,7 +98,7 @@
                         </div>
                         <div class="value">
                             <p>
-                                rosie.odenkirk@hansaw.com
+                                sam_ismael@hotmail.co.uk
                             </p>
                         </div>
                     </div>
@@ -118,7 +118,7 @@
                         <div class="col-10">
                             <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                             <p>
-                                I'm  a skilled Full Stack Developer with a wealth of diverse
+                                I'm a Junior Full Stack Developer with a wealth of diverse
                                 life and technical experience that I bring to every project.
                             </p>
                         </div>
@@ -158,18 +158,54 @@
         </div>
     </div>
 </section>
+<section class="container-fluid project-section">
+    <div class="container">
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-sm-4">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+</section>
 <footer class="container-fluid">
     <div id="footer-details" class="row">
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">About</h5>
-            <p class="inline-block">Full Stack Web Developer, Skilled in HTML5, CSS3 and Javascript.
-            Limitless potential for Design and intuitive structural thinking. </p>
+            <p class="inline-block">Full Stack Web Developer, Skilled in HTML5, CSS3, Javascript, SQL and Python.
+            Limitless potential for Design and intuitive structural thinking.</p>
         </div>
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">Download</h5>
             <p class="inline-block">
                 Need a printable version of my CV? Download it here.
-                <a href="assets/CV/sample doc.docx" target="_blank" class="cv-pdf">
+                <a href="" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download Link</span>
                 </a>
@@ -179,30 +215,9 @@
             <h5 class="uppercase general-sub">Social</h5>
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
-                    <a href="www.facebook.com" target="_blank">
-                        <i class="fa fa-facebook" aria-hidden="true">
-                            <span class="sr-only">Facebook</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="https://twitter.com/?lang=en-gb" target="_blank">
-                        <i class="fa fa-twitter" aria-hidden="true">
-                            <span class="sr-only">Twitter</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="www.linkedin.com" target="_blank">
+                    <a href="https://www.linkedin.com/in/sam-ismael-6686b6196/" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true">
                             <span class="sr-only">LinkedIn</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="https://www.pinterest.co.uk/" target="_blank">
-                        <i class="fa fa-pinterest" aria-hidden="true">
-                            <span class="sr-only">Pinterest</span>
                         </i>
                     </a>
                 </li>
@@ -210,13 +225,6 @@
                     <a href="https://www.instagram.com/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true">
                             <span class="sr-only">Instagram</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="https://www.youtube.com/" target="_blank">
-                        <i class="fa fa-youtube" aria-hidden="true">
-                            <span class="sr-only">Youtube</span>
                         </i>
                     </a>
                 </li>
