Added project imgs, and fixing socials

--- a/contacts.html
+++ b/contacts.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Sam</title>
+    <title>Samuel Ismael</title>
 </head>
 <body>
 <header>
@@ -18,7 +18,7 @@
         <div class="col-md-8">
             <div class="row no-gutters bg-color-name-title">
                 <div class="col heading">
-                    <h1 class="name">Rosie Odenkirk</h1>
+                    <h1 class="name">Samuel Ismael</h1>
                     <h2 class="title">Full Stack Developer</h2>
                 </div>
             </div>
@@ -121,9 +121,9 @@
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-youtube" aria-hidden="true">
-                            <span class="sr-only">Youtube</span>
+                    <a href="https://github.com/Codey94" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true">
+                            <span class="sr-only">Github</span>
                         </i>
                     </a>
                 </li>
