--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Sam</title>
+    <title>Samuel Ismael</title>
 </head>
 <body>
 <header>
@@ -18,7 +18,7 @@
         <div class="col-md-8">
             <div class="row no-gutters bg-color-name-title">
                 <div class="col heading">
-                    <h1 class="name">Rosie Odenkirk</h1>
+                    <h1 class="name">Samuel Ismael</h1>
                     <h2 class="title">Full Stack Developer</h2>
                 </div>
             </div>
@@ -55,21 +55,21 @@
                 </div>
             </div>
             <div class="history-items">
-            <div class="timeline-item" data-dates="02/1998 - 04/2004">
-                <h4>National College of Art and Design (NCAD)</h4>
-                <p>Sculptor in residence</p>
+            <div class="timeline-item" data-dates="09/2016 - 07/2017">
+                <h4>Cadogan Tate</h4>
+                <p>Fine Art Handler</p>
             </div>
-            <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                <h4>Fisher and Diaz Funeral Directors</h4>
-                <p>Junior Embalmer</p>
+            <div class="timeline-item" data-dates="01/2018 - 07/2019">
+                <h4>Rock-it Cargo </h4>
+                <p>Forklift driver</p>
             </div>
-            <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                <h4>Phantom Design Inc.</h4>
-                <p>Junior Front End Developer</p>
+            <div class="timeline-item" data-dates="10/2019 - 08/2020">
+                <h4>Panorama Antennas</h4>
+                <p>Production and packing</p>
             </div>
-            <div class="timeline-item" data-dates="06/2011 - Present">
-                <h4>Hooli Inc. Silicon Valley</h4>
-                <p>Full Stack Web Developer</p>
+            <div class="timeline-item" data-dates="06/2021 - Present">
+                <h4>Tacticle Gaming (TG)</h4>
+                <p>Debugging technician</p>
             </div>
             </div>
         </div>
@@ -89,8 +89,7 @@
                             <h4 class="three-reasons-heading uppercase">Front End</h4>
                             <p>
                                 I'm skilled in user Experience Design using the trinity of HTML/CSS/Javascript. 
-                                I also have extensive experience in Front End Frameworks such as Angular
-                                and React.
+                                I also have extensive experience in Front End Frameworks such as Bootstrap and Materialize.
                             </p>
                         </div>
                     </div>
@@ -105,7 +104,7 @@
                             <p>
                                I specialise in data-driven web applications.
                                Many of my projects utilise document-based data.
-                               I use python and Django in conjuction with MangoDB to process and present information.
+                               I use python and SQLite3 to process and present information.
                             </p>
                         </div>
                     </div>
@@ -204,9 +203,9 @@
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-youtube" aria-hidden="true">
-                            <span class="sr-only">Youtube</span>
+                    <a href="https://github.com/Codey94" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true">
+                            <span class="sr-only">Github</span>
                         </i>
                     </a>
                 </li>
