--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <a href="contacts.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                            <a href="assets/CV/sample doc.docx" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                            <a href="/assets/CV/Jr Dev Tech CV.docx" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                         </li>
                     </ul>
                 </div>
@@ -160,37 +160,45 @@
 </section>
 <section class="container-fluid project-section">
     <div class="container">
+        <h3 class="section-heading uppercase" id="project-heading">Projects</h3>
         <div class="row">
           <div class="col-sm-4">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/IMGs/Order summary component.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Order summary component</h5>
+                  <p class="card-text">Using only HTML and CSS I was able to make this component for an order summary. This was a fun project, and great practice for responsive design skills. I enjoyed the front end focus, using flexbox, finely tuning the colours, the smaller details and how it all comes together to make great a user experience.</p>
+                  <a href="https://gallant-aryabhata-a64ffb.netlify.app/" target="_blank" class="btn btn-primary">Visit this project</a>
                 </div>
               </div>
           </div>
           <div class="col-sm-4">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/IMGs/Password generator.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Password generator</h5>
+                  <p class="card-text">Following some instruction from a tutorial, and using the powerful Logic of Javascript, and a small amount of HTML and CSS I was able to create this Handy password generator. It gives the option to choose how many charaters you would like in your password, as well as including uppercase, numbers and symbols, up to a maximum of 50 charaters.</p>
+                  <a href="https://amazing-sundae-8709f5.netlify.app/" class="btn btn-primary">Visit this project</a>
                 </div>
               </div>
           </div>
           <div class="col-sm-4">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="/IMGs/Sunnyside.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Sunnyside</h5>
+                  <p class="card-text">This was the first landing page I made, using frontend mentor. I have since reused this layout for a friend that thought it would be perfect for her Cake website. She became my very first customer, so this project marks a milestone in my progress.  </p>
+                  <a href="https://silly-hamilton-9b3fe3.netlify.app/" class="btn btn-primary">Visit this project</a>
                 </div>
               </div>
           </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12" id="filmFlix">
+                <div class="ratio ratio-1x1">
+                    <iframe src="" title="FilmFlix" allowfullscreen></iframe>
+                </div>
+            </div>
         </div>
       </div>
 </section>
@@ -205,7 +213,7 @@
             <h5 class="uppercase general-sub">Download</h5>
             <p class="inline-block">
                 Need a printable version of my CV? Download it here.
-                <a href="" target="_blank" class="cv-pdf">
+                <a href="/assets/CV/Jr Dev Tech CV.docx" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download Link</span>
                 </a>
@@ -225,6 +233,13 @@
                     <a href="https://www.instagram.com/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true">
                             <span class="sr-only">Instagram</span>
+                        </i>
+                    </a>
+                </li>
+                <li class="list-inline-item">
+                    <a href="https://github.com/Codey94" target="_blank">
+                        <i class="fa fa-github" aria-hidden="true">
+                            <span class="sr-only">Github</span>
                         </i>
                     </a>
                 </li>
