Fixed progress bars

--- a/contacts.html
+++ b/contacts.html
@@ -86,35 +86,14 @@
             <h5 class="uppercase general-sub">Social</h5>
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-facebook" aria-hidden="true">
-                            <span class="sr-only">Facebook</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-twitter" aria-hidden="true">
-                            <span class="sr-only">Twitter</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/sam-ismael-6686b6196/" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true">
                             <span class="sr-only">LinkedIn</span>
                         </i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-pinterest" aria-hidden="true">
-                            <span class="sr-only">Pinterest</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.instagram.com/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true">
                             <span class="sr-only">Instagram</span>
                         </i>
