--- a/resume.html
+++ b/resume.html
@@ -116,31 +116,31 @@
                        <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%;">
                         <span class="sr-only">90% complete</span>
                     </div>
-                    <span class="progress-type">HTML / HTML5</span> 
+                    <span class="progress-type">HTML5</span> 
                     </div>
                     <div class="progress">
                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                         <span class="sr-only">80% complete</span>
                     </div>
-                    <span class="progress-type">CSS / CSS3</span> 
+                    <span class="progress-type">CSS3</span> 
                     </div>
                     <div class="progress">
-                       <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
-                        <span class="sr-only">70% complete</span>
+                       <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%;">
+                        <span class="sr-only">60% complete</span>
                     </div>
-                    <span class="progress-type">Javascript / JQuiery</span> 
-                    </div>
-                    <div class="progress">
-                       <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                        <span class="sr-only">80% complete</span>
-                    </div>
-                    <span class="progress-type">Django / Python</span> 
+                    <span class="progress-type">Javascript</span> 
                     </div>
                     <div class="progress">
-                       <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
-                        <span class="sr-only">80% complete</span>
+                       <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:65%;">
+                        <span class="sr-only">65% complete</span>
                     </div>
-                    <span class="progress-type">SQL / NOSQL</span> 
+                    <span class="progress-type">Python</span> 
+                    </div>
+                    <div class="progress">
+                       <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width:50%;">
+                        <span class="sr-only">50% complete</span>
+                    </div>
+                    <span class="progress-type">SQL</span> 
                     </div>
                 </div>
             </div>
@@ -168,35 +168,14 @@
             <h5 class="uppercase general-sub">Social</h5>
             <ul class="list-inline social-links">
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-facebook" aria-hidden="true">
-                            <span class="sr-only">Facebook</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-twitter" aria-hidden="true">
-                            <span class="sr-only">Twitter</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.linkedin.com/in/sam-ismael-6686b6196/" target="_blank">
                         <i class="fa fa-linkedin" aria-hidden="true">
                             <span class="sr-only">LinkedIn</span>
                         </i>
                     </a>
                 </li>
                 <li class="list-inline-item">
-                    <a href="#" target="_blank">
-                        <i class="fa fa-pinterest" aria-hidden="true">
-                            <span class="sr-only">Pinterest</span>
-                        </i>
-                    </a>
-                </li>
-                <li class="list-inline-item">
-                    <a href="#" target="_blank">
+                    <a href="https://www.instagram.com/" target="_blank">
                         <i class="fa fa-instagram" aria-hidden="true">
                             <span class="sr-only">Instagram</span>
                         </i>
