--- a/contacts.html
+++ b/contacts.html
@@ -69,7 +69,7 @@
     <div id="footer-details" class="row">
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">About</h5>
-            <p class="inline-block">Full Stack Web Developer, Skilled in HTML5, CSS3 and Javascript.
+            <p class="inline-block">Junior software developer, Skilled in HTML5, CSS3 and Javascript.
             Limitless potential for Design and intuitive structural thinking. </p>
         </div>
         <div class="col-sm-4">
