--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row no-gutters bg-color-name-title">
                 <div class="col heading">
                     <h1 class="name">Samuel Ismael</h1>
-                    <h2 class="title">Full Stack Developer</h2>
+                    <h2 class="title">Junior software developer</h2>
                 </div>
             </div>
             <div class="row no-gutters">
@@ -118,7 +118,7 @@
                         <div class="col-10">
                             <h4 class="three-reasons-heading uppercase">What do I do?</h4>
                             <p>
-                                I'm a Junior Full Stack Developer with a wealth of diverse
+                                I'm a Junior software developer with a wealth of diverse
                                 life and technical experience that I bring to every project.
                             </p>
                         </div>
@@ -206,7 +206,7 @@
     <div id="footer-details" class="row">
         <div class="col-sm-4">
             <h5 class="uppercase general-sub">About</h5>
-            <p class="inline-block">Full Stack Web Developer, Skilled in HTML5, CSS3, Javascript, SQL and Python.
+            <p class="inline-block">Junior software developer, Skilled in HTML5, CSS3, Javascript, SQL and Python.
             Limitless potential for Design and intuitive structural thinking.</p>
         </div>
         <div class="col-sm-4">
