CV links added, address changed

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
                     <div class="personal-info-item">
                         <div class="key">
                             <p class="uppercase">
-                                Address:
+                                Location:
                             </p>
                         </div>
                         <div class="value">
                             <p>
-                                35 Perran Walk, Brentford, Middlesex, TW8 0LT
+                                West London, Brentford
                             </p>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Password generator</h5>
                   <p class="card-text">Following some instruction from a tutorial, and using the powerful Logic of Javascript, and a small amount of HTML and CSS I was able to create this Handy password generator. It gives the option to choose how many charaters you would like in your password, as well as including uppercase, numbers and symbols, up to a maximum of 50 charaters.</p>
-                  <a href="https://amazing-sundae-8709f5.netlify.app/" class="btn btn-primary">Visit this project</a>
+                  <a href="https://amazing-sundae-8709f5.netlify.app/" target="_blank" class="btn btn-primary">Visit this project</a>
                 </div>
               </div>
           </div>
@@ -188,7 +188,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Sunnyside</h5>
                   <p class="card-text">This was the first landing page I made, using frontend mentor. I have since reused this layout for a friend that thought it would be perfect for her Cake website. She became my very first customer, so this project marks a milestone in my progress.  </p>
-                  <a href="https://silly-hamilton-9b3fe3.netlify.app/" class="btn btn-primary">Visit this project</a>
+                  <a href="https://silly-hamilton-9b3fe3.netlify.app/" target="_blank" class="btn btn-primary">Visit this project</a>
                 </div>
               </div>
           </div>
