--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
                             <a href="contacts.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                         </li>
                         <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                            <a href="assets/CV/sample doc.docx" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                            <a href="/assets/CV/Jr Dev Tech CV.docx" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                         </li>
                     </ul>
                 </div>
@@ -76,7 +76,7 @@
             <h5 class="uppercase general-sub">Download</h5>
             <p class="inline-block">
                 Need a printable version of my CV? Download it here.
-                <a href="assets/CV/sample doc.docx" target="_blank" class="cv-pdf">
+                <a href="/assets/CV/Jr Dev Tech CV.docx" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download Link</span>
                 </a>
