Testing mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Samuel Ismael</title>
+    <style>
+
+    </style>
 </head>
 <body>
 <header>
@@ -162,8 +165,8 @@
     <div class="container">
         <h3 class="section-heading uppercase" id="project-heading">Projects</h3>
         <div class="row">
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
+          <div class="col-sm-4" id="col-sm-4">
+            <div class="card">
                 <img src="/IMGs/Order summary component.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Order summary component</h5>
@@ -172,8 +175,8 @@
                 </div>
               </div>
           </div>
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
+          <div class="col-sm-4" id="col-sm-4">
+            <div class="card">
                 <img src="/IMGs/Password generator.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Password generator</h5>
@@ -182,8 +185,8 @@
                 </div>
               </div>
           </div>
-          <div class="col-sm-4">
-            <div class="card" style="width: 18rem;">
+          <div class="col-sm-4" id="col-sm-4">
+            <div class="card">
                 <img src="/IMGs/Sunnyside.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Sunnyside</h5>
